Background is Slightly Lighter

--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@ body {
     font-family: monospace;
     font-size: large;
     color: #1E1E1E;
-    background-color: #D4D4D4;
+    background-color: #fdfdfd;
 }
 
 /* Mobile Styles */
