Added LinkedIn, Fixed GitHub Url

--- a/src/index.html
+++ b/src/index.html
@@ -87,8 +87,13 @@ ul {
 
         <ul>
             <li>
-                <a href="https://github.com/jonkrouth/" title="Jonathon's GitHub Page" target="_blank">
+                <a href="https://github.com/TitletownTechie" title="Jonathon's GitHub Page" target="_blank">
                     GitHub >>
+                </a>
+            </li>
+            <li>
+                <a href="https://www.linkedin.com/in/jonathon-k-5982a3235/" title="Jonathon's GitHub Page" target="_blank">
+                    LinkedIn >>
                 </a>
             </li>
         </ul>
